html updated, started css and js

--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
 </head>
 <body>
 
-    <div id='top-timer' class='hidden'>
+    <div class='hidden' id='top-timer'>
         Time:
     </div>
-    <header class='h1' id='main-header'>
-        Play Code Quiz 2.5!!!
-    </header>
-
-    <main>
+    <header>
+        <section class='h1' id='main-header'>
+        Play Code Quiz 2.5.8!!!
+        </section>
         <ol>
             <li>Try to answer all the questions in 60 seconds!</li>
             <li>Wrong answers will be penalized by a 5 second deduction off the timer.</li>
@@ -25,8 +24,11 @@
         </ol>
         <p><b>Good Luck!!</b></p>
         <button type='button' id='start-button'><b>Click to Start!</b></button>
+    </header>
 
-        <section id='quiz-box' class='hidden'>
+    <main>
+
+        <section id='quiz-main' class='hidden'>
             <h2 id='questions'></h2>
             <div id='mult-choice'></div>
             <h3 id='correct-answer' class='hidden'></h3>
