--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li>Remember to enter your initials at the end - go for the high score!</li>
         </ol>
         <p><b>Good Luck!!</b></p>
-        <button type='button' id='start-button'><b>Click to Start!</b></button>
+        <button type='button' id='start-btn'><b>Click to Start!</b></button>
     </header>
 
     <main>
