--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 </head>
 <body>
 
-    <div class='hidden' id='top-timer'>
-        Time:
+    <div id='top-timer' class='hidden'>
+        
     </div>
     <header>
         <section class='h1' id='main-header'>
         Play Code Quiz 2.5.8!!!
         </section>
         <ol>
-            <li>Try to answer all the questions in 60 seconds!</li>
+            <li>Try to answer all the questions in 90 seconds!</li>
             <li>Wrong answers will be penalized by a 5 second deduction off the timer.</li>
             <li>Remember to enter your initials at the end - go for the high score!</li>
         </ol>
@@ -29,7 +29,7 @@
     <main>
 
         <section id='quiz-main' class='hidden'>
-            <h2 id='questions'></h2>
+            <h2 id='quiz-question'></h2>
             <div id='mult-choice'></div>
             <h3 id='correct-answer' class='hidden'></h3>
         </section>
